<resources>
    <string name="app_name">Truth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- menu -->
    <string name="menu_bible">Bible</string>
    <string name="menu_my_verse">Mes versets</string>
    <string name="menu_my_comments">Mes commentaires</string>
    <string name="menu_community">Communauté</string>
    <string name="logout">Se déconnecter</string>
    <string name="indentity">Identité</string>
    <string name="login">Se connecter</string>
    <string name="via_google">via Google+</string>
    <string name="via_facebook">via Facebook</string>

    <string name="search">Recherche</string>
    <string name="old_testament">Ancien testament</string>
    <string name="new_testament">Nouveau testament</string>

    <string name="nb_book">%d livres</string>
    <string name="anonyme">Anonyme</string>
    <string name="search_result">Résultats de recherche</string>
    <string name="no_favorite_verse">Aucun verset mis en favori</string>
    <string name="text_empty">Liste vide. Aucun élément ajouté</string>
    <string name="no_comment_yet">Pas de commentaire encore</string>
    <string name="new_comment">Nouveau commentaire</string>
    <string name="new_comment_hint">Entrer ici votre commentaire</string>
    <string name="send">Envoyer</string>
    <string name="new_comment_ref" formatted="false">%s %d, verset %d à</string>
    <string name="comment_ref" formatted="false">%s %d : %d - %d</string>

    <plurals name="nb_results">
        <item quantity="zero">%d résultat</item>
        <item quantity="one">%d résultat</item>
        <item quantity="other">%d résultats</item>
    </plurals>

    <plurals name="nb_verses">
        <item quantity="zero">%d verset</item>
        <item quantity="one">%d verset</item>
        <item quantity="other">%d versets</item>
    </plurals>

    <plurals name="nb_references">
        <item quantity="zero">%d référence</item>
        <item quantity="one">%d référence</item>
        <item quantity="other">%d références</item>
    </plurals>

    <plurals name="nb_more_comments">
        <item quantity="zero">%d commentaire en plus</item>
        <item quantity="one">%d commentaire en plus</item>
        <item quantity="other">%d commentaires en plus</item>
    </plurals>
</resources>
