<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bible"
            android:icon="@drawable/ic_menu_bible"
            android:title="@string/menu_bible"/>
        <item
            android:id="@+id/nav_verse"
            android:icon="@drawable/ic_menu_verse"
            android:title="@string/menu_my_verse"/>
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_menu_comment"
            android:title="@string/menu_my_comments"/>
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistic"
            android:title="@string/menu_my_statistics"/>
    </group>

    <item android:id="@+id/identity"
          android:title="@string/indentity">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout"/>

            <item
                android:id="@+id/login_google"
                android:icon="@drawable/google_plus"
                android:title="@string/via_google"/>

            <item
                android:id="@+id/login_facebook"
                android:icon="@drawable/facebook"
                android:title="@string/via_facebook"/>
        </menu>

    </item>

</menu>
