<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="36dp"
                  android:background="@drawable/box_new_comment"
                  android:orientation="vertical"
                  android:paddingTop="28dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/new_comment"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/dark_green"
            android:textSize="17sp"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:gravity="center"
                      android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/new_comment"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:text="Genèse 1, verset 1 à "/>

            <Spinner android:id="@+id/end_verse"
                     android:layout_width="48dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/box_edittext"/>

        </LinearLayout>

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/box_edittext"
            android:gravity="top"
            android:hint="@string/new_comment_hint"
            android:inputType="textMultiLine"
            android:padding="4dp"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/green"
            android:text="@string/send"
            android:textColor="@color/white"/>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/book_placeholder"
        app:civ_border_color="@color/very_light_gray"
        app:civ_border_width="3dp"
        app:civ_fill_color="@color/green"/>
</RelativeLayout>
